# SimulCost-Bench

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  EPOCH_SETUP.md  EULER_2D_SETUP.md  FEM_2D_SETUP.md  LICENSE  README.md  REVIEW_MAIN_REPO.md  environment.yml  pyproject.toml  run_all_burgers_1d.sh  test_df.py  test_lazy_import.py
.github/workflows/: mirror.yml
agent_gen/heat_transfer/: prompt.py  search.py
api_call/: __init__.py
api_call/heat_transfer/: get_heat_transfer_exp_summary.py  run_1d_heat_transfer_PDE_exp.py  (+1 more)
configs/: custom_models.json
custom_model/: README.md  custom_inference.py  llama_inference.py  methods.py  methods_.py  prompt.md
dataset_gen/: __init__.py  base.py  cgyro.py  hasegawa_mima_linear.py  hasegawa_mima_nonlinear.py  heat_transfer.py  oneD_burgers.py  oneD_diff_react.py  oneD_epoch.py  oneD_euler.py  oneD_euler_icl.py  oneD_heat_transfer.py  twoD_euler.py  twoD_fem.py  twoD_heat_transfer.py  twoD_mpm.py  twoD_ns.py  twoD_ns_transient.py
error_record/: deepseek.r1-v1:0_g1.json  gemini-1.5-pro_g1.json
eval_results/: merged_results.parquet
evaluation/: README.md  create_md.py  draw_soft_success.py  merge_results.py  overall_stats.py  simul_sum.py  soft_success.md  spearman_correlation.py  tabulate.py  validation_utils.py
inference/: __init__.py  langchain_LLM.py  utils.py
plots/: analysis_paired_ttest.py  barplot_utils.py  constants.py  mcnemar_utils.py  results.md  ttest_utils.py  utils.py  visualize_icl.py  visualize_icl_mcnemar.py  visualize_icl_ttest.py  visualize_overall.py  visualize_overall_per_dataset.py  visualize_paired_mcnemar.py  visualize_paired_ttest.py
post_processing/: compute_cost_efficiency.py
qs_gen/: 1D_burgers.py  1D_diff_react.py  1D_epoch.py  1D_euler.py  1D_heat_transfer.py  2D_euler.py  2D_fem.py  2D_heat_transfer.py  2D_mpm.py  2D_ns.py  2D_ns_transient.py  cgyro.py  hasegawa_mima_linear.py  hasegawa_mima_nonlinear.py  heat_transfer.py  utils.py
scripts/: README.md  eval_heat_tranfer.sh  list_custom_models.py  model_inference_burgers_1d.sh  qs_gen_burgers_1d.sh  qs_gen_euler_1d.sh  qs_gen_heat_1d.sh  qs_gen_heat_2d.sh
tool_call/: __init__.py
tool_documentation/: heat_transfer.json  oneD_heat_transfer_cfl.json
utils/: __init__.py  extract_prompts.py  param_compatibility.py  rsync_backup.sh
(+963 files in other folders)
