[tool.poetry]
name = "casebench"
version = "0.1.0"
description = ""
authors = ["howard <howard10532@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.19"
vllm = "^0.7.3"
wandb = "^0.19.7"
tqdm = "^4.67.1"
transformers = "^4.49.0"
s5cmd = "^0.2.0"
langchain-google-genai = "^2.0.11"
langchain-openai = "^0.3.7"
openpyxl = "^3.1.5"
scipy = "^1.15.2"
h5py = "^3.13.0"
pandas = "^2.2.3"
boto3 = "^1.37.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
