[tool.poetry]
name = "SimulCost"
version = "0.1.0"
description = "SimulCost Bench"
authors = ["LeoLai"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
langchain = "^0.3.19"
wandb = "^0.19.7"
tqdm = "^4.67.1"
s5cmd = "^0.2.0"
langchain-google-genai = "^2.0.11"
langchain-openai = "^0.3.7"
openpyxl = "^3.1.5"
scipy = "^1.15.2"
h5py = "^3.13.0"
pandas = "^2.2.3"
boto3 = "^1.37.7"
hydra-core = "^1.3.2"
matplotlib = "^3.10.1"
black = "^25.1.0"
langchain-aws = "^0.2.28"
xlsxwriter = "^3.2.5"
python-dotenv = "^1.1.1"
urllib3 = "<2.0.0"
seaborn = "^0.13.2"
taichi = "^1.7.4"
pyarrow = "^21.0.0"
meshio = "^5.3.5"
transformers = "^5.8.0"
torch = "^2.11.0"
accelerate = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''